--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
     "@stomp/stompjs": "^7.0.1",
     "@tailwindcss/forms": "^0.5.10",
+    "@types/leaflet": "^1.9.17",
+    "@types/react-leaflet": "^3.0.0",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.5.0",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.483.0",
     "next": "latest",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.1",
@@ -19,7 +28,9 @@
     "react": "latest",
     "react-dom": "latest",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-paystack": "^6.0.0",
+    "react-toastify": "^11.0.5",
     "sockjs-client": "^1.6.1",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.3",
